# bnn-graybox

./: .gitignore  README.md  gen_data.py  gen_data_v2.py  note_0001_psd.ipynb  paper_0001_noise_model.ipynb  paper_0002_PSD_SGM_training.ipynb  paper_0003_PSD_PGM_training.ipynb  paper_0004_cc_visualization.ipynb  pyproject.toml
